@@ -109,6 +109,12 @@ struct InfoBoxSettings {
 
   } geometry;
 
+/*
+ * scales the font for InfoBox titles and comments between 50% and 150%
+ * the value of scale_title_font ranges from 50 to 150 accordingly.
+ */
+  unsigned scale_title_font;
+
   bool use_colors;
 
   enum class BorderStyle : uint8_t {
