@@ -110,6 +110,10 @@ Profile::Load(const ProfileMap &map, InfoBoxSettings &settings)
     break;
   }
 
+  map.Get(ProfileKeys::InfoBoxTitleScale, settings.scale_title_font);
+  if ((settings.scale_title_font < 80) || (settings.scale_title_font > 150))
+    settings.scale_title_font = 100;
+
   map.Get(ProfileKeys::AppInfoBoxColors, settings.use_colors);
 
   map.GetEnum(ProfileKeys::AppInfoBoxBorder, settings.border_style);
