@@ -218,6 +218,7 @@ constexpr std::string_view FontTeamCodeFont = "TeamCodeFont";
 
 constexpr std::string_view UseFinalGlideDisplayMode = "UseFinalGlideDisplayMode";
 constexpr std::string_view InfoBoxGeometry = "InfoBoxGeometry";
+constexpr std::string_view InfoBoxTitleScale = "InfoBoxTitleScale";
 
 constexpr std::string_view FlarmSideData = "FlarmRadarSideData";
 constexpr std::string_view FlarmAutoZoom = "FlarmRadarAutoZoom";
